--- a/website.html
+++ b/website.html
@@ -86,7 +86,7 @@
 
   <!-- Main Content with Carousel -->
   <main class="w-full">
-    <section class="carousel-section relative rounded-lg sm:rounded-none overflow-hidden w-full aspect-[16/9] sm:aspect-[16/7] sm:max-w-[900px] sm:mx-auto">
+    <section class="carousel-section relative rounded-lg sm:rounded-none overflow-hidden w-full aspect-[16/9] sm:aspect-[16/7] ">
       <div class="carousel w-full h-full relative">
         <!-- Carousel Item 1 -->
         <div class="carousel-item absolute inset-0 w-full h-full active">
